Add a GitHub link profile

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <footer>
       <p>
         This project was coded by
-        <a href="#" target="_blank">Tania Encina</a> and is
+        <a href="#" target="https://github.com/tenadg">Tania Encina</a> and is
         <a href="#" target="https://github.com/tenadg/myfirstshecodesproject"> on GitHub</a> and
         <a href="#" target="_blank">hosted on Netlify</a>
       </p>
