Add Netlify link

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         This project was coded by
         <a href="#" target="https://github.com/tenadg">Tania Encina</a> and is
         <a href="#" target="https://github.com/tenadg/myfirstshecodesproject"> on GitHub</a> and
-        <a href="#" target="_blank">hosted on Netlify</a>
+        <a href="#" target="https://magenta-croissant-602a93.netlify.app/">hosted on Netlify</a>
       </p>
     </footer>
   </div>
