--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
     <footer>
       <p>
         This project was coded by
-        <a href="#" target="https://github.com/tenadg">Tania Encina</a> and is
-        <a href="#" target="https://github.com/tenadg/myfirstshecodesproject"> on GitHub</a> and
-        <a href="#" target="https://magenta-croissant-602a93.netlify.app/">hosted on Netlify</a>
+        <a href="https://github.com/tenadg" target="_blank">Tania Encina</a> and is
+        <a href="https://github.com/tenadg/myfirstshecodesproject" target="_blank"> on GitHub</a> and
+        <a href="https://magenta-croissant-602a93.netlify.app/" target="_blank">hosted on Netlify</a>
       </p>
     </footer>
   </div>
